--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Staingate.org</title>
+    <title>QC35, THE TRUTH.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- All CSS Style -->
-    <link rel="stylesheet" href="./Staingate.org_files/font-awesome.min.css">
-    <link rel="stylesheet" href="./Staingate.org_files/bootstrap.min.css">
-    <link rel="stylesheet" href="./Staingate.org_files/slicknav.css">
-    <link rel="stylesheet" href="./Staingate.org_files/normalize.css">
-    <link rel="stylesheet" href="./Staingate.org_files/main.css">
-    <link rel="stylesheet" href="./Staingate.org_files/style.css">
-    <link rel="stylesheet" href="./Staingate.org_files/colorbox.css">
-    <script async="" src="./Staingate.org_files/analytics.js"></script>
-    <script src="./Staingate.org_files/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="./files/font-awesome.min.css">
+    <link rel="stylesheet" href="./files/bootstrap.min.css">
+    <link rel="stylesheet" href="./files/slicknav.css">
+    <link rel="stylesheet" href="./files/normalize.css">
+    <link rel="stylesheet" href="./files/main.css">
+    <link rel="stylesheet" href="./files/style.css">
+    <link rel="stylesheet" href="./files/colorbox.css">
+    <script async="" src="./files/analytics.js"></script>
+    <script src="./files/modernizr-2.6.2.min.js"></script>
 </head>
 <body data-gr-c-s-loaded="true">
 <div class="slicknav_menu"><a href="#" aria-haspopup="true" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: none;"><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a>
@@ -43,7 +43,7 @@
                     <ul id="menu" class="top-menu">
                         <li style="padding-left: 5%;"><a href="#whatisthestaingate">QC35/QC30 Review</a></li>
                         <li style="padding-left: 15px;text-align: center"><a href="#whatdoweexpectfrombose">What do we expect from Bose?</a></li>
-                        <li style="text-align: right;padding-right:82px;"><a href="#gallery">Twitter feeds</a></li>
+                        <li style="text-align: right;padding-right:82px;"><a href="#twitter">Twitter</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="option1-content">
-                    <h1>Bose QC35/QC30 The truth now one is saying.</h1>
+                    <h1>Bose QC35/QC30 The truth no one is saying.</h1>
                     <p>These Headset are great headset for listen to music, but they are not designed to handle phone call and neither skype o voip app.
                     </p>
                     <br>
@@ -116,7 +116,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="option3-content">
                     <h1>More information</h1>
-                    <p>For more information you can join the <a target="_blank" href="https://www.facebook.com/groups/607572909386595/">Facebook Group</a> to share your experience too and get the latest news about this subject.</p><br><br>
+                    <p>For more information you can join the <a target="_blank" href="https://www.facebook.com/groups/279964002434922">Facebook Group</a> to share your experience too and get the latest news about this subject.</p><br><br>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
 </section><!-- End work area -->
 
 <!-- Start Gallery area -->
-<section class="gallery-area" id="gallery">
+<section class="gallery-area" id="twitter">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -144,12 +144,12 @@
 
 <!-- All JS Script -->
 <script src="htttp://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="./Staingate.org_files/jquery-1.10.2.min.js"></script>
-<script src="./Staingate.org_files/plugins.js"></script>
-<script src="./Staingate.org_files/bootstrap.min.js"></script>
-<script src="./Staingate.org_files/jquery.slicknav.min.js"></script>
-<script src="./Staingate.org_files/jquery.colorbox-min.js"></script>
-<script type="text/javascript" src="./Staingate.org_files/main.js">
+<script src="./files/jquery-1.10.2.min.js"></script>
+<script src="./files/plugins.js"></script>
+<script src="./files/bootstrap.min.js"></script>
+<script src="./files/jquery.slicknav.min.js"></script>
+<script src="./files/jquery.colorbox-min.js"></script>
+<script type="text/javascript" src="./files/main.js">
 </script>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <!--<script>-->
