--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 <!-- All JS Script -->
-<script src="htttp://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="./files/jquery-1.10.2.min.js"></script>
 <script src="./files/plugins.js"></script>
 <script src="./files/bootstrap.min.js"></script>
