--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
     <script src="./files/modernizr-2.6.2.min.js"></script>
 </head>
 <body data-gr-c-s-loaded="true">
-<div class="slicknav_menu"><a href="#" aria-haspopup="true" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: none;"><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a>
-    <ul class="slicknav_nav slicknav_hidden" style="display: none;" aria-hidden="true" role="menu">
-        <li style="padding-left: 5%;"><a href="#whatisthestaingate" role="menuitem" tabindex="-1">What is the Staingate?</a></li>
-        <li style="padding-left: 15px;text-align: center"><a href="#whatdoweexpectfrombose" role="menuitem" tabindex="-1">What do we expect from Apple?</a></li>
-        <li style="text-align: right;padding-right:82px;"><a href="#gallery" role="menuitem" tabindex="-1">Stain Gallery</a></li>
-    </ul>
+
+
 </div>
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -41,9 +37,9 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <nav>
                     <ul id="menu" class="top-menu">
-                        <li style="padding-left: 5%;"><a href="#whatisthestaingate">QC35/QC30 Review</a></li>
-                        <li style="padding-left: 15px;text-align: center"><a href="#whatdoweexpectfrombose">What do we expect from Bose?</a></li>
-                        <li style="text-align: right;padding-right:82px;"><a href="#twitter">Twitter</a></li>
+                        <li style="text-align: center"><a href="#whatisthestaingate">QC35/QC30 Review</a></li>
+                        <li style="text-align: center"><a href="#whatdoweexpectfrombose">What do we expect from Bose?</a></li>
+                        <li style="text-align: center"><a href="#twitter">Twitter</a></li>
                     </ul>
                 </nav>
             </div>
@@ -102,7 +98,6 @@
                     </h2>
 
 
-
                 </div>
             </div>
         </div>
@@ -131,8 +126,16 @@
                 <h1>Twitter</h1>
             </div>
             <div style="text-align: center;">
-                <a class="twitter-timeline"  href="https://twitter.com/hashtag/QC35flawed" data-widget-id="846388065740443648">Tweet riguardo #CQ35flawed</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                <a class="twitter-timeline" href="https://twitter.com/hashtag/QC35flawed" data-widget-id="846388065740443648">Tweet riguardo #CQ35flawed</a>
+                <script>!function (d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + "://platform.twitter.com/widgets.js";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, "script", "twitter-wjs");</script>
 
             </div>
 
@@ -153,20 +156,20 @@
 </script>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <!--<script>-->
-    <!--(function (i, s, o, g, r, a, m) {-->
-        <!--i['GoogleAnalyticsObject'] = r;-->
-        <!--i[r] = i[r] || function () {-->
-                <!--(i[r].q = i[r].q || []).push(arguments)-->
-            <!--}, i[r].l = 1 * new Date();-->
-        <!--a = s.createElement(o),-->
-            <!--m = s.getElementsByTagName(o)[0];-->
-        <!--a.async = 1;-->
-        <!--a.src = g;-->
-        <!--m.parentNode.insertBefore(a, m)-->
-    <!--})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');-->
+<!--(function (i, s, o, g, r, a, m) {-->
+<!--i['GoogleAnalyticsObject'] = r;-->
+<!--i[r] = i[r] || function () {-->
+<!--(i[r].q = i[r].q || []).push(arguments)-->
+<!--}, i[r].l = 1 * new Date();-->
+<!--a = s.createElement(o),-->
+<!--m = s.getElementsByTagName(o)[0];-->
+<!--a.async = 1;-->
+<!--a.src = g;-->
+<!--m.parentNode.insertBefore(a, m)-->
+<!--})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');-->
 
-    <!--ga('create', 'UA-60789443-1', 'auto');-->
-    <!--ga('send', 'pageview');-->
+<!--ga('create', 'UA-60789443-1', 'auto');-->
+<!--ga('send', 'pageview');-->
 
 <!--</script>-->
 
