add mail contact

--- a/index.html
+++ b/index.html
@@ -203,5 +203,7 @@
     </div>
     <div style="position: absolute; width: 9999px; visibility: hidden; display: none; max-width: none;"></div>
 </div>
+
+<p>for any info or help, please contact <a href="mailto:alessandrofrancia.adv@gmail.com">me here</a></p>
 </body>
 <span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
